chore: fix filter chips to open filter dialog on click

--- a/src/app/components/filters/filters-toolbar.component.html
+++ b/src/app/components/filters/filters-toolbar.component.html
@@ -27,10 +27,8 @@
                 Or
               </span>
             }
-            <app-filters-chips 
-              [filtersAnd]="filtersAnd" 
-              [customColumns]="customColumns"
-              (filtersChange)="onFiltersChange($event)"/>
+           <app-filters-chips [filtersAnd]="filtersAnd"/>
+
           </div>
         
         }
