--- a/src/app/components/filters/filters-chips.component.html
+++ b/src/app/components/filters/filters-chips.component.html
@@ -1,7 +1,6 @@
 <mat-chip-listbox>
   @for(filter of filters(); track $index) {
-    <mat-chip class="mat-chip-clickable mat-mdc-standard-chip mat-primary mat-mdc-chip-selected" (click)="openFiltersDialog()">
-      <span>{{ filter }}</span>
+   <mat-chip class="mat-mdc-standard-chip mat-primary mat-mdc-chip-selected" (click)="openFiltersDialog()">      <span>{{ filter }}</span>
     </mat-chip>
     @if(!$last) {
       <span class="text" i18n>AND</span>
