chore: fix filter chips to open filter dialog on click

--- a/src/app/components/filters/filters-toolbar.component.html
+++ b/src/app/components/filters/filters-toolbar.component.html
@@ -27,7 +27,7 @@
                 Or
               </span>
             }
-           <app-filters-chips [filtersAnd]="filtersAnd"/>
+           <app-filters-chips [filtersAnd]="filtersAnd" (openFilters)="openFiltersDialog()" />
 
           </div>
         
