--- a/src/app/settings/index.component.scss
+++ b/src/app/settings/index.component.scss
@@ -95,3 +95,7 @@ main {
 .cdk-drop-list-dragging li:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+mat-form-field {
+  width: fit-content;
+}
