--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,18 @@
 @use 'assets/styles' as *;
-/* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+@use 'assets/themes' as theme; // location of generated file
+
+html {
+  color-scheme: light dark;
+  @include mat.theme((
+    color: (
+      primary: theme.$primary-palette,
+      tertiary: theme.$tertiary-palette,
+    ),
+    typography: Roboto,
+    density: 0,
+  ));
+}
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
