--- a/src/app/components/filters/filters-dialog-or.component.scss
+++ b/src/app/components/filters/filters-dialog-or.component.scss
@@ -1,4 +1,5 @@
 @use 'styles' as *;
+@use '@angular/material' as mat;
 
 :host {
   @include flex-row(2rem);
@@ -11,7 +12,7 @@ span {
 }
 
 .filters {
-  background-color: #f5f5f5;
+  background-color: light-dark(mat.get-theme-color($theme, neutral-variant, 90), mat.get-theme-color($theme, primary, 35)) !important;
   border: 1px solid #e0e0e0;
   border-radius: 0.5rem;
   padding: 1rem;
