--- a/src/app/components/navigation/external-services/external-services.scss
+++ b/src/app/components/navigation/external-services/external-services.scss
@@ -1,3 +1,6 @@
+@use 'styles' as *;
+@use '@angular/material' as mat;
+
 mat-divider {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
@@ -24,6 +27,10 @@ button, button:hover {
 .external-services {
   padding: 0;
   margin-bottom: 0;
+  
+  mat-icon, span {
+    color: mat.get-theme-color($theme, primary, 90) !important;
+  }
 }
 
 .external-services li {
