--- a/src/app/components/status-chip.component.scss
+++ b/src/app/components/status-chip.component.scss
@@ -1,3 +1,12 @@
+@use '@angular/material' as mat;
+
+:host {
+  @include mat.chips-overrides((
+    outline-width: 0,
+    container-shape-radius: 2rem,
+  ));
+}
+
 p {
   margin: 0;
   font-weight: 500;
