--- a/src/app/healthcheck/healthcheck.component.html
+++ b/src/app/healthcheck/healthcheck.component.html
@@ -1,4 +1,4 @@
-<button mat-button [matMenuTriggerFor]="switchLanguage" i18n-matTooltip [disabled]="!data">
+<button mat-button class="open-healthcheck" [matMenuTriggerFor]="switchLanguage" i18n-matTooltip [disabled]="!data">
   <mat-icon matListItemIcon [fontIcon]="getIcon('healthcheck')" aria-hidden="true" />
   <span class="health-color" [style]="{'color':getColor(globalStatus)}"
     [matTooltip]="getToolTip(globalStatus)">&#10687;</span>
