--- a/src/app/components/navigation/external-services/external-services.scss
+++ b/src/app/components/navigation/external-services/external-services.scss
@@ -24,13 +24,17 @@ button, button:hover {
   box-shadow: none;
 }
 
-.external-services {
+button.external-services {
   padding: 0;
   margin-bottom: 0;
   
   mat-icon, span {
     color: mat.get-theme-color($theme, primary, 90) !important;
   }
+}
+
+ul.external-services {
+  padding: 0 !important;
 }
 
 .external-services li {
@@ -68,11 +72,9 @@ mat-dialog-actions {
   margin: 0;
   padding: 0;
 
-  display: flex;
-  align-items: center;
-  gap: 1rem;
+  @include flex-row($gap: 1rem, $justify:start);
 
-  color: rgba(255, 255, 255, 0.6);
+  color: mat.get-theme-color($theme, primary, 90) !important;
 }
 
 .cdk-drag-preview .name {
