--- a/src/app/settings/index.component.scss
+++ b/src/app/settings/index.component.scss
@@ -1,4 +1,5 @@
 @use 'styles' as *;
+@use '@angular/material' as mat;
 
 app-page-section + app-page-section {
   display: block;
@@ -79,23 +80,26 @@ main {
   margin-bottom: 1rem;
 }
 
-.cdk-drag-preview {
-  @include flex-row($gap: 1rem, $justify: start);
-  color: rgba(0, 0, 0, 0.6);
-}
-
-.cdk-drag-placeholder {
-  opacity: 0;
-}
-
-.cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.cdk-drop-list-dragging li:not(.cdk-drag-placeholder) {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
 mat-form-field {
   width: fit-content;
+}
+
+.custom-file-upload {
+  border: 1px solid light-dark(mat.get-theme-color($theme, primary, 40), mat.get-theme-color($theme, primary, 90));
+  color: light-dark(mat.get-theme-color($theme, primary, 40), mat.get-theme-color($theme, primary, 90));
+  border-radius: 0.4em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 6px 12px;
+  cursor: pointer;
+  transition: background-color 200ms linear;
+}
+
+.custom-file-upload > span {
+  padding-left: 10px;
+}
+
+.custom-file-upload:hover {
+  background-color: light-dark(mat.get-theme-color($theme, neutral-variant, 90), mat.get-theme-color($theme, neutral-variant, 20));
 }
