--- a/src/assets/styles/angular.scss
+++ b/src/assets/styles/angular.scss
@@ -48,3 +48,19 @@ mat-sidenav {
 mat-nav-list > mat-divider {
   margin: 0.5rem !important;
 }
+
+.cdk-drag-preview {
+  @include flex-row($gap: 1rem, $justify: start, $wrap: nowrap);
+  }
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.cdk-drop-list-dragging li:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
