chore: filter chip opens filter dialog (#1333)
Co-authored-by: Faustin Dewas <117363666+fdewas-aneo@users.noreply.github.com>

--- a/src/app/components/filters/filters-toolbar.component.html
+++ b/src/app/components/filters/filters-toolbar.component.html
@@ -27,7 +27,8 @@
                 Or
               </span>
             }
-            <app-filters-chips [filtersAnd]="filtersAnd"/>
+           <app-filters-chips [filtersAnd]="filtersAnd" (openFilters)="openFiltersDialog()" />
+
           </div>
         
         }
