--- a/src/app/components/navigation/version-menu/versions-menu.component.scss
+++ b/src/app/components/navigation/version-menu/versions-menu.component.scss
@@ -3,6 +3,6 @@
 
 button.version {
   mat-icon, span {
-    color: mat.get-theme-color($theme, primary, 90) !important;
+    color: var(--armonik-header-color) !important;
   }
 }
