--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,6 +1,28 @@
 @use '@angular/material' as mat;
-@use '../themes/azure-blue.scss' as light-blue;
+@use '../themes/light-blue.scss' as light-blue;
 @use '../themes/dark-green.scss' as dark-green;
+@use '../themes/dark-purple.scss' as dark-purple;
+@use '../themes/light-pink.scss' as light-pink;
+
+$light-blue: mat.define-theme(
+  (
+    color: (
+      theme-type: color-scheme,
+      primary: light-blue.$primary-palette,
+      tertiary: light-blue.$tertiary-palette,
+    )
+  )
+);
+
+$light-pink: mat.define-theme(
+  (
+    color: (
+      theme-type: color-scheme,
+      primary: light-pink.$primary-palette,
+      tertiary: light-pink.$tertiary-palette,
+    )
+  )
+);
 
 $dark-green: mat.define-theme(
   (
@@ -12,12 +34,12 @@ $dark-green: mat.define-theme(
   )
 );
 
-$light-blue: mat.define-theme(
+$dark-purple: mat.define-theme(
   (
     color: (
       theme-type: color-scheme,
-      primary: light-blue.$primary-palette,
-      tertiary: light-blue.$tertiary-palette,
+      primary: dark-purple.$primary-palette,
+      tertiary: dark-purple.$tertiary-palette,
     )
   )
 );
