--- a/src/assets/styles/angular.scss
+++ b/src/assets/styles/angular.scss
@@ -64,3 +64,29 @@ mat-nav-list > mat-divider {
 .cdk-drop-list-dragging li:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+// Notifications
+.mat-mdc-snackbar-surface {
+  color: white !important;
+  button {
+    color: white !important;
+  }
+}
+
+.error {
+  .mat-mdc-snackbar-surface {
+    background-color: var(--armonik-error) !important;
+  }
+}
+
+.warning {
+  .mat-mdc-snackbar-surface {
+    background-color: light-dark(#FF9D5C, #FF6000) !important;
+  }
+}
+
+.success {
+  .mat-mdc-snackbar-surface {
+    background-color: light-dark(#446555, #2c4d3e) !important;
+  }
+}
