--- a/src/app/components/filters/filters-dialog-input.component.html
+++ b/src/app/components/filters/filters-dialog-input.component.html
@@ -19,7 +19,7 @@
     <ngx-mat-datetime-picker #picker [showSpinners]="true" [showSeconds]="true" >
       <ngx-mat-datepicker-actions>
         <button mat-button ngxMatDatepickerCancel i18n>Cancel</button>
-        <button mat-raised-button color="primary" ngxMatDatepickerApply i18n>Apply</button>
+        <button mat-flat-button color="primary" ngxMatDatepickerApply i18n>Apply</button>
       </ngx-mat-datepicker-actions>
     </ngx-mat-datetime-picker>
     </mat-form-field>
