--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -34,7 +34,7 @@
     density: 0,
   ));
   --armonik-container-background: light-dark(#{mat.get-theme-color(var.$light-blue, neutral-variant, 90)}, #{mat.get-theme-color(var.$light-blue, primary, 50)});
-  --armonik-container-background-light: light-dark(#{mat.get-theme-color(var.$light-blue, neutral-variant, 90)}, #{mat.get-theme-color(var.$light-blue, primary, 35)});
+  --armonik-container-background-light: light-dark(#{mat.get-theme-color(var.$light-blue, neutral-variant, 90)}, #{mat.get-theme-color(var.$light-blue, primary, 50)});
   --armonik-table-background: light-dark(#{mat.get-theme-color(var.$light-blue, neutral, 96)}, #{mat.get-theme-color(var.$light-blue, neutral, 10)});
   --armonik-header-background: #{mat.get-theme-color(var.$light-blue, primary, 35)};
   --armonik-header-color: #{mat.get-theme-color(var.$light-blue, primary, 90)};
@@ -54,7 +54,7 @@
     density: 0,
   ));
   --armonik-container-background: light-dark(#{mat.get-theme-color(var.$dark-green, neutral-variant, 90)}, #{mat.get-theme-color(var.$dark-green, primary, 50)});
-  --armonik-container-background-light: light-dark(#{mat.get-theme-color(var.$dark-green, neutral-variant, 90)}, #{mat.get-theme-color(var.$dark-green, primary, 35)});
+  --armonik-container-background-light: light-dark(#{mat.get-theme-color(var.$dark-green, neutral-variant, 90)}, #{mat.get-theme-color(var.$dark-green, primary, 50)});
   --armonik-table-background: light-dark(#{mat.get-theme-color(var.$dark-green, neutral, 96)}, #{mat.get-theme-color(var.$dark-green, neutral, 10)});
   --armonik-header-background: #{mat.get-theme-color(var.$dark-green, primary, 35)};
   --armonik-header-color: #{mat.get-theme-color(var.$dark-green, primary, 90)};
@@ -73,8 +73,8 @@
     typography: Roboto,
     density: 0,
   ));
-  --armonik-container-background: light-dark(#{mat.get-theme-color(var.$light-pink, neutral-variant, 90)}, #{mat.get-theme-color(var.$light-pink, primary, 50)});
-  --armonik-container-background-light: light-dark(#{mat.get-theme-color(var.$light-pink, neutral-variant, 90)}, #{mat.get-theme-color(var.$light-pink, primary, 35)});
+  --armonik-container-background: light-dark(#{mat.get-theme-color(var.$light-pink, neutral-variant, 90)}, #{mat.get-theme-color(var.$light-pink, secondary, 40)});
+  --armonik-container-background-light: light-dark(#{mat.get-theme-color(var.$light-pink, neutral-variant, 90)}, #{mat.get-theme-color(var.$light-pink, secondary, 40)});
   --armonik-table-background: light-dark(#{mat.get-theme-color(var.$light-pink, neutral, 96)}, #{mat.get-theme-color(var.$light-pink, neutral, 10)});
   --armonik-header-background: #{mat.get-theme-color(var.$light-pink, primary, 35)};
   --armonik-header-color: #{mat.get-theme-color(var.$light-pink, primary, 90)};
@@ -94,7 +94,7 @@
     density: 0,
   ));
   --armonik-container-background: light-dark(#{mat.get-theme-color(var.$dark-purple, neutral-variant, 90)}, #{mat.get-theme-color(var.$dark-purple, primary, 50)});
-  --armonik-container-background-light: light-dark(#{mat.get-theme-color(var.$dark-purple, neutral-variant, 90)}, #{mat.get-theme-color(var.$dark-purple, primary, 35)});
+  --armonik-container-background-light: light-dark(#{mat.get-theme-color(var.$dark-purple, neutral-variant, 90)}, #{mat.get-theme-color(var.$dark-purple, primary, 50)});
   --armonik-table-background: light-dark(#{mat.get-theme-color(var.$dark-purple, neutral, 96)}, #{mat.get-theme-color(var.$dark-purple, neutral, 10)});
   --armonik-header-background: #{mat.get-theme-color(var.$dark-purple, primary, 35)};
   --armonik-header-color: #{mat.get-theme-color(var.$dark-purple, primary, 90)};
