chore: update variables code

--- a/src/app/components/auto-refresh-button.component.scss
+++ b/src/app/components/auto-refresh-button.component.scss
@@ -2,6 +2,6 @@
 
 .auto-refresh-disabled {
   border: 0px;
-  color: $grey-font;
-  background-color: $grey;   
+  color: var(--armonik-neutral-color);
+  background-color: var(--armonik-neutral-background-color);
 }
