--- a/src/assets/styles/angular.scss
+++ b/src/assets/styles/angular.scss
@@ -49,6 +49,24 @@ mat-nav-list > mat-divider {
   margin: 0.5rem !important;
 }
 
+.mat-mdc-card-header-text {
+  width: 100%;
+}
+
+.mat-mdc-menu-content {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
+
+article > .mat-mdc-menu-item-text {
+  min-width: 20em !important;
+}
+
+// Drag components
+[cdkDragHandle] {
+  cursor: move;
+}
+
 .cdk-drag-preview {
   @include flex-row($gap: 1rem, $justify: start, $wrap: nowrap);
   }
