--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -14,3 +14,53 @@ h1, h2, h3, strong {
   background-color: var(--armonik-header-background) !important;
   color: var(--armonik-header-color) !important;
 }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  border: 0;
+}
+
+app-table-column-header {
+  display: flex;
+  align-items: center;
+}
+
+app-table-index-actions-toolbar, app-table-dashboard-actions-toolbar {
+  flex-grow: 1;
+}
+
+input[type="file"] {
+  display: none;
+}
+
+#loading-app {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  font-size: 25px;
+  text-align: center;
+  background-color: light-dark(#FFFFFF, #111111);
+  cursor: none;
+}
+
+#error {
+  background-color: var(--armonik-error);
+  border: 1px solid var(--armonik-error);
+  border-radius: 1rem;
+  padding: 1.5rem;
+}
+
+#mouse-effect {
+  position: absolute;
+  border-radius: 100%;
+  transform: translate(-50%, -50%);
+}
