chore: disable profile button

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -26,7 +26,7 @@
   <app-external-services />
   <app-versions-menu />
   <app-theme-selector/>
-  <button mat-icon-button [routerLink]="'/profile'" matTooltip="Profil" i18n-matTooltip="Profile button tooltip">
+  <button mat-icon-button [routerLink]="'/profile'" [disabled]="isProfileButtonDisabled()" matTooltip="Profil" i18n-matTooltip="Profile button tooltip">
     <mat-icon [fontIcon]="getIcon('profile')"></mat-icon>
   </button>
 </mat-toolbar>
