chore: remove unsed code

--- a/src/app/settings/index.component.html
+++ b/src/app/settings/index.component.html
@@ -48,7 +48,7 @@
           </button>
         </li>
       }
-      <button class="add-sidebar-item" mat-stroked-button (click)="onAddSidebarItem()" [disabled]="isAddButtonDisabled()">
+      <button class="add-sidebar-item" mat-stroked-button (click)="onAddSidebarItem()">
         <mat-icon aria-hidden="true" [fontIcon]="getIcon('add')"></mat-icon>
         <span i18n> Add an item </span>
       </button>
