feat: move profile from navbar to header button (#1331)
Co-authored-by: Faustin Dewas <117363666+fdewas-aneo@users.noreply.github.com>

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -24,6 +24,9 @@
   <app-external-services />
   <app-versions-menu />
   <app-theme-selector/>
+  <button mat-icon-button [routerLink]="'/profile'" [disabled]="isProfileButtonDisabled()" matTooltip="Profil" i18n-matTooltip="Profile button tooltip">
+    <mat-icon [fontIcon]="getIcon('profile')"></mat-icon>
+  </button>
 </mat-toolbar>
 <mat-sidenav-container autosize class="sidenav-container">
   <mat-sidenav #drawer class="sidenav"
