--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -46,7 +46,7 @@
         <span matListItemTitle> {{ settingsItem }} </span>
       </a>
     </mat-nav-list>
-
+    <app-scheme-switcher />
   </mat-sidenav>
   <mat-sidenav-content>
     <main>
