--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -7,7 +7,11 @@ mat-sidenav-container {
 
 .sidenav {
   width: 200px;
-  margin-bottom: 0.25rem;
+  margin: 0.25rem 0;
+}
+
+.mat-toolbar {
+  margin-bottom: 0 !important;
 }
 
 .sidenav .mat-toolbar {
